# polysemy-log-lite

./: LICENSE  polysemy-log-lite.cabal  stack.yaml
example/: Example.hs
src/Polysemy/: Log.hs
src/Polysemy/Log/: Effect.hs  Interpreter.hs  Types.hs  Utils.hs
