cabal-version:      3.0
name:               polysemy-log-lite
version:            0.1
synopsis:           Simple and stupid logging effect
license:            MIT
license-file:       LICENSE
author:             Lana Black
maintainer:         lanablack@amok.cc
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Polysemy.Log
                      Polysemy.Log.Effect
                      Polysemy.Log.Types
                      Polysemy.Log.Utils
    other-modules:    Polysemy.Log.Interpreter
    build-depends:    base >=4.14 && < 5.0,
                      polysemy >= 1.7 && < 2.0,
                      text >= 1.2

    hs-source-dirs:   src
    default-language: Haskell2010

executable example
    import:           warnings
    hs-source-dirs:   example
    main-is:          Example.hs
    build-depends:    base >= 4.14 && < 5,
                      polysemy,
                      polysemy-log-lite

test-suite polysemy-log-lite-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.14 && < 5,
        polysemy-log-lite
